--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
     <div data-role="Header" class="header-header">
         <nav class="header-nav">
             <div class="header-container">
-                <a href="index.html" class="header-navlink">Guider</a>
+                <a href="{% url 'home' %}" class="header-navlink">Guider</a>
                 <div class="header-menu">
                     <a href="/" class="header-navlink1 Large">Home</a>
                     <a href="/#about" class="header-navlink1 Large">About</a>
