--- a/templates/home/result.html
+++ b/templates/home/result.html
@@ -19,19 +19,20 @@
         <div class="col-lg-8 col-sm-12 px-0">
             <div class="col-12 p-4">
                 <p class="text-content text-06">Your organization is:</p>
-                <h1 class="my-2 h h1">{{ category.title }}</h1>
-                <p class="text-content w-75">{{ category.caption }}</p>
+                <h1 class="my-2 h h1">{{ result.category.title }}</h1>
+                <p class="text-content w-75">{{ result.category.caption }}</p>
             </div>
             <div class="row pb-5 border-bottom">
                 <div class="col-lg-3 col-sm-12 overall-container">
                     <p class="text-white">Overall Score</p>
-                    <h1 class="text-white" style="font-size: 5.5rem;">{{ overall_score }}<span
+                    <h1 class="text-white" style="font-size: 5.5rem;">{{ result.score | floatformat  }}<span
                             style="font-size: 2rem;">&nbsp;%</span></h1>
                 </div>
-                <div class="col-lg-9 col-sm-12 chart-grid pl-5 p-lg-5 py-0" style="grid-template-columns: repeat({{ pages }}, 100px)">
-                    {% for name, _, _ in page_scores %}
+                <div class="col-lg-9 col-sm-12 chart-grid pl-5 p-lg-5 py-0"
+                     style="grid-template-columns: repeat({{ pages | length }}, 100px)">
+                    {% for page in pages.all %}
                         <div class="d-flex flex-column justify-content-center align-items-center">
-                            <p class="text-white">{{ name }}</p>
+                            <p class="text-white">{{ page.page.name }}</p>
                             <div style="width: 100px; height: 100px;">
                                 <canvas class="donutChart{{ forloop.counter }}"></canvas>
                             </div>
@@ -40,20 +41,20 @@
                 </div>
             </div>
 
-            {% for page in form_pages %}
+            {% for page in pages %}
                 <div class="row mb-4 border-top">
                     <div class="col-12 p-4">
-                        <h2 class="h h2">{{ page.name }}</h2>
+                        <h2 class="h h2">{{ page.page.name }}</h2>
 
                         <div class="row">
-                            <p class="col-sm-12 col-lg-9 page-description">{{ page.result_description }}</p>
+                            <p class="col-sm-12 col-lg-9 page-description">{{ page.page.result_description }}</p>
                             <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
                                 <div style="width: 190px; height: 190px;">
                                     <canvas class="donutChart{{ forloop.counter }}"></canvas>
                                 </div>
                             </div>
                         </div>
-                        {% for suggestion in page.suggestion_set.all %}
+                        {% for suggestion in page.suggestions.all %}
                             {% if forloop.counter == 1 %}
                                 <p class="h mt-4 mb-2">Suggestions from our resource library.</p>
                             {% endif %}
@@ -116,7 +117,7 @@
             cutout: "85%"
         }
 
-        {% for name, score, remaining in page_scores %}
+        {% for page in pages.all %}
 
             for (const chart of document.getElementsByClassName("donutChart{{ forloop.counter }}"))
                 new Chart(chart, {
@@ -128,7 +129,7 @@
                                 "rgb(16 190 210)",
                                 "rgb(58 76 88)"
                             ],
-                            data: [{{ score }}, {{ remaining }}]
+                            data: [{{ page.score }}, 100 - {{ page.score }}]
                         }]
                     },
                     plugins: [{
@@ -143,7 +144,7 @@
                             ctx.fillStyle = "white";
                             ctx.textBaseline = "middle";
 
-                            const text = "{{ score }}%",
+                            const text = "{{ page.score | floatformat }}%",
                                 textX = Math.round((width - ctx.measureText(text).width) / 2),
                                 textY = height + ctx.measureText("M").width;
 
