Info flickering fix

--- a/templates/home/assessment.html
+++ b/templates/home/assessment.html
@@ -40,7 +40,7 @@
                         <h3 class="mb-4">{{ question.question_text }}</h3>
                         {% if question.info %}
                             <div class="info-container">
-                                <i class="info-button">i</i>
+                                <i class="info-button" tabindex="0">i</i>
                                 <p class="info-text">{{ question.info }}</p>
                             </div>
                         {% endif %}
