--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,23 @@
     {% endblock %}
 </head>
 <body>
+<div id="google_translate_element">
+    <p class="text-white">Translate This Page</p>
+</div>
+
+<script>
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({
+            pageLanguage: 'en',
+            autoDisplay: 'true',
+            layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
+        }, 'google_translate_element');
+    }
+</script>
+
+<script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 {% block nav %}
     <div data-role="Header" class="header-header">
         <nav class="header-nav">
@@ -60,5 +77,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 {% block script %}{% endblock %}
+
+<script>
+
+</script>
 </body>
 </html>
