Text field for guidelines in Result page (above or below download button)

--- a/templates/home/result.html
+++ b/templates/home/result.html
@@ -84,6 +84,7 @@
         </div>
         <div class="col-lg-4 hidden-sm border-left p-5">
             <p class="text-white my-4" style="font-size: 1.1rem; text-align: justify;">
+                {% if guidelines %} {{ guidelines }} <br><br> {% endif %}
                 Use this URL to share this page with colleagues, funders, or anyone you choose:
             </p>
             <div class="row">
