--- a/templates/home/result.html
+++ b/templates/home/result.html
@@ -11,9 +11,14 @@
 
     {% block nav %}{% endblock %}
     <div class="bg-primary-500 row m-0">
-        <div class="col-12 border-bottom">
+        <div class="col-4 col-lg-9 border-bottom">
             <div class="text-left p-3">
                 <h3 class="font-bold text-white"><a href="/">Guider</a></h3>
+            </div>
+        </div>
+        <div class="col-8 col-lg-3 border-bottom">
+            <div class="text-left p-3">
+                <a class="font-bold text-white btn btn-outline-secondary" href="{% url 'result_download' result.id %}">Download Response</a>
             </div>
         </div>
         <div class="col-lg-8 col-sm-12 px-0">
