fixed response id

--- a/templates/home/result.html
+++ b/templates/home/result.html
@@ -18,7 +18,7 @@
         </div>
         <div class="col-8 col-lg-3 border-bottom">
             <div class="text-left p-3">
-                <a class="font-bold text-white btn btn-outline-secondary" href="{% url 'result_download' result.id %}">Download Response</a>
+                <a class="font-bold text-white btn btn-outline-secondary" href="{% url 'result_download' response_id %}">Download Response</a>
             </div>
         </div>
         <div class="col-lg-8 col-sm-12 px-0">
