--- a/static/css/assessment.css
+++ b/static/css/assessment.css
@@ -57,7 +57,7 @@
     margin-bottom: 10px;
     border-radius: 8px;
     transition: background-color 0.3s;
-    font-size: 1.2rem;
+    font-size: 17px;
 }
 
 .choice-item:hover {
