--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
         new google.translate.TranslateElement({
             pageLanguage: 'en',
             autoDisplay: 'true',
+            includedLanguages: 'hi,pt,am,ne',
             layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
         }, 'google_translate_element');
     }
