--- a/templates/base.html
+++ b/templates/base.html
@@ -17,14 +17,10 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'vendor/bootswatch/default/bootstrap.min.css' %}">
+    <link href="{% static 'css/lib/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&amp;display=swap"
-            data-tag="font"
-    />
+    <link rel="stylesheet" href="{% static 'css/lib/all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/lib/open-sans.css' %}" data-tag="font"/>
 
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
