--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
         new google.translate.TranslateElement({
             pageLanguage: 'en',
             autoDisplay: 'true',
-            includedLanguages: 'hi,pt,am,ne',
+            includedLanguages: 'hi,pt,am,ne,en',
             layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
         }, 'google_translate_element');
     }
