added print option

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     {% endblock %}
 </head>
 <body>
-<div id="google_translate_element">
+<div id="google_translate_element" class="p-hidden">
     <p class="text-white">Translate This Page</p>
 </div>
 
