--- a/templates/home/result.html
+++ b/templates/home/result.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block title %}
+    <title>{{ result.response.assessment.name }}</title>
+{% endblock %}
+
 {% block style %}
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/result.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/print.css' %}" media="print" />
+
 {% endblock %}
 
 {% block content %}
@@ -17,8 +23,10 @@
             </div>
         </div>
         <div class="col-8 col-lg-3 border-bottom">
-            <div class="text-left p-3">
-                <a class="font-bold text-white btn btn-outline-secondary" href="{% url 'result_download' response_id %}">Download Response</a>
+            <div class="text-left p-3 p-hidden">
+                <button class="font-bold text-white btn btn-outline-secondary" onclick="window.print()">
+                    Print Result
+                </button>
             </div>
         </div>
         <div class="col-lg-8 col-sm-12 px-0">
@@ -87,7 +95,7 @@
                 </div>
             {% endfor %}
         </div>
-        <div class="col-lg-4 hidden-sm border-left p-5">
+        <div class="col-lg-4 hidden-sm border-left p-5 p-hidden">
             <p class="text-white my-4" style="font-size: 1.1rem; text-align: justify;">
                 {% if guidelines %} {{ guidelines }} <br><br> {% endif %}
                 Use this URL to share this page with colleagues, funders, or anyone you choose:
